logs/offboard_pkg/build.make.226.log.stderr
In file included from /home/tutu/FControl/mavros_ws/src/offboard_pkg/src/main1.cpp:1:
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/MultiBody.h:28:30: error: ‘safe_error_dis_list’ has not been declared
   28 |     void Init_safe_error_dis(safe_error_dis_list);
      |                              ^~~~~~~~~~~~~~~~~~~
make[2]: *** [CMakeFiles/offboard_pkg_node.dir/build.make:63: CMakeFiles/offboard_pkg_node.dir/src/main1.cpp.o] Error 1
make[2]: *** Waiting for unfinished jobs....
In file included from /home/tutu/FControl/mavros_ws/src/offboard_pkg/src/MultiBody.cpp:1:
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/MultiBody.h:28:30: error: ‘safe_error_dis_list’ has not been declared
   28 |     void Init_safe_error_dis(safe_error_dis_list);
      |                              ^~~~~~~~~~~~~~~~~~~
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/MultiBody.cpp:294:56: error: variable or field ‘Init_safe_error_dis’ declared void
  294 | void MultiBody::Init_safe_error_dis(safe_error_dis_list)
      |                                                        ^
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/MultiBody.cpp:294:37: error: ‘safe_error_dis_list’ was not declared in this scope
  294 | void MultiBody::Init_safe_error_dis(safe_error_dis_list)
      |                                     ^~~~~~~~~~~~~~~~~~~
make[2]: *** [CMakeFiles/offboard_pkg_node.dir/build.make:89: CMakeFiles/offboard_pkg_node.dir/src/MultiBody.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:399: CMakeFiles/offboard_pkg_node.dir/all] Error 2
make: *** [Makefile:141: all] Error 2
